fix some spacing bugs and polish design

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body, html {
     margin: 0;
     min-width: 320px;
     box-sizing: border-box;
-    background: #EAE6E5;
+    background: #fff;
 }
 
 body {
@@ -31,10 +31,6 @@ body {
 @media only screen and (min-width: 1024px) {
     body {
         grid-template-columns: 1fr 1024px 1fr;
-    }
-
-    .header {
-        padding: 1rem;
     }
 }
 
@@ -71,20 +67,23 @@ a {
     color: #EAE6E5;
     border-radius: 5px;
     padding: .5rem;
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
-    text-shadow: 1px 2px 10px rgba(0,0,0,0.2);
     margin: 2rem;
     text-align: center;
 }
 
-.header--github, .header--codepen, .header--projects, .header--resume {
+.header--nav {
     grid-area: 2 / 1 / 3 / 2;
     padding: .5rem;
     cursor: pointer;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
-.header--icon {
-    margin-right: 1rem;
+.header--nav:hover {
+    background: #efefef;
 }
 
 .header--codepen {
@@ -111,15 +110,19 @@ a {
         grid-template-columns: 5fr 1fr 1fr 1fr 1fr;
     }
 
-    .logo, .header--github, .header--codepen, .header--projects, .header--resume {
+    .logo, .header--nav {
         grid-row: 1;
     }
     
     .logo {
         grid-column: 1;
-        margin: 0;
+        /* margin: 0; */
         align-self: center;
         justify-self: start;
+    }
+
+    .header--nav {
+        flex-direction: column;
     }
     
     .header--github {
@@ -148,7 +151,6 @@ a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
-    min-width: 100vw;
 }
 
 .hero--content {
@@ -386,8 +388,7 @@ main {
     justify-content: center;
     display: flex;
     flex-direction: column;
-    box-shadow: 
-        5px 5px 15px rgba(0,0,0,0.3),
+    box-shadow:
         inset 0 0 0 5px rgba(0,0,0,0.3);
     transform: scale(.9);
     transition: 
@@ -411,20 +412,19 @@ main {
     justify-content: center;
     align-items: center;
     font-size: 1rem;
-    background: rgba(255,255,255,0.7);
-    color: #326483;
-    border: 1px solid #111;
-    border-style: solid none;
+    background: rgba(0, 0, 0, 0.85);
+    color: #EAE6E5;
     transition: 
         transform .8s ease-in-out;
-    text-shadow:
-        0 0 2px rgba(255, 255, 255, 0.9), 
-        0 0 8px rgba(255, 255, 255, 0.45);
 }
 
 .project--title {
     transform: translateY(-150%);
     flex: 5;
+    background: rgba(255,255,255,0.85);
+    color: #326483;
+    border: 1px solid #111;
+    border-style: solid none;
 }
 
 
@@ -438,12 +438,16 @@ main {
     transform: translateY(150%);
     flex: 5;
     pointer-events: none;
+    background: rgba(255,255,255,0.85);
+    color: #326483;
+    border: 1px solid #111;
+    border-style: solid none;
 }
 
 .project--details--container {   
     transform: translateX(75%);
     margin: 0;
-    width: auto;
+    width: 100%;
     flex: 0;
     display: flex;
     flex-direction: row-reverse;
@@ -461,14 +465,22 @@ main {
 }
     
 .project--details {
+    height: 100%;
     font-size: .75rem;
     flex-basis: 33%;
     background: rgba(0,0,0,0.7);
-    color: #759EB8;
-    border: 1px solid rgba(255,255,255,0.7);
-    border-style: none none none solid;
+    color: #EAE6E5;
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
+}
+
+.details-txt {
+    margin: 0 0 4px 0;
+}
+
+.details-title {
+    margin: .5rem;
 }
     
 .open {
@@ -505,14 +517,11 @@ main {
     flex: 50;
 }
 
-/* .project.open-active > .project--title {
-    transform: translateY(0);
+@media only screen and (min-width: 400px) {
+    .project--details {
+        padding: 0 .5rem 0 .5rem;
+    }
 }
-
-.project.open-active > .project--link {
-    transform: translateY(0);
-    pointer-events: all;
-} */
 
 @media only screen and (min-width: 550px) {
     .projects {
